[tool.poetry]
name = "rrt"
version = "0.1.0"
description = ""
authors = ["froggagul <froggagul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
imageio = "^2.34.0"
tqdm = "^4.66.2"
ipywidgets = "^8.1.2"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
